<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="edu.kit.outwait.recyclerviewScreens.addSlotDialog.AddSlotDialogViewModel" />

        <import type="android.view.View" />
    </data>


    <ScrollView
        android:id="@+id/scrollViewAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:nextFocusDown="@string/appointment_time">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/containerAddDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            tools:context=".recyclerviewScreens.addSlotDialog.AddSlotDialogFragment">

            <ru.ifr0z.timepickercompact.TimePickerCompact
                android:id="@+id/tpAppointmentTime"
                style="@style/Widget.TimeDurationPicker.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:background="@color/duration_digit_color"
                android:numbersTextColor="@color/white"
                android:timePickerMode="spinner"
                android:visibility="@{viewModel.isFixedSlot? View.VISIBLE:View.GONE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAppointmentTimeAddDialog" />

            <TextView
                android:id="@+id/tvAppointmentTimeAddDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/appointment_time"
                android:textColor="@color/outwait_color"
                android:textSize="@dimen/title_big"
                android:visibility="@{viewModel.isFixedSlot ?View.VISIBLE:View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addSlotDuration" />

            <mobi.upod.timedurationpicker.TimeDurationPicker
                android:id="@+id/addSlotDuration"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@color/duration_digit_color"
                android:paddingHorizontal="10dp"
                android:visibility="visible"
                app:backspaceIcon="@drawable/ic_backspace"
                app:clearIcon="@drawable/ic_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDurationAddDialog">

            </mobi.upod.timedurationpicker.TimeDurationPicker>

            <TextView
                android:id="@+id/tvDurationAddDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/duration"
                android:textColor="@color/outwait_color"
                android:textSize="@dimen/title_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etIdentifierAddDialog" />

            <TextView
                android:id="@+id/tvIdentifierAddDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center|clip_vertical|center_vertical"
                android:text="@string/identifier"
                android:textColor="@color/outwait_color"
                android:textSize="@dimen/title_big"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etIdentifierAddDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:cursorVisible="true"
                android:ems="10"
                android:textColor="@color/outwait_color_dark"
                android:singleLine="true"
                android:backgroundTint="@color/outwait_color_dark"
                android:focusableInTouchMode="true"
                android:inputType="textPersonName"
                android:nextFocusDown="@id/addSlotDuration"
                android:text="@={viewModel.identifier}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvIdentifierAddDialog" />

            <CheckBox
                android:id="@+id/cbIsFixedSlot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.isFixedSlot}"
                android:text="@string/fixed_slot"
                android:textColor="@color/outwait_color"
                android:textSize="@dimen/title_small"
                android:buttonTint="@color/outwait_color"
                android:visibility="@{viewModel.isModeTwo?View.VISIBLE:View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="@+id/tvIdentifierAddDialog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.949"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
