<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/config"
        android:icon="@drawable/ic_config"
        android:title="Configuration"
        app:showAsAction="ifRoom"/>
</menu>
